--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ node_js:
   - "0.12"
 before_install:
   - "npm install -g bower"
-  - "npm install -g wct"
+  - "bower install"
+  - "npm install -g web-component-tester"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 script: "DISPLAY=:99.0 wct"
