--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - "npm install -g web-component-tester"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-script: "DISPLAY=:99.0 wct"
+script: "wct"
